[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  

[project]
name = "heptapods"
version = "0.0.1"
authors = [
  { name="Oliver Umney", email="scou@leeds.ac.uk" },
]
description = "Package for analysing SMLM data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars",
    "numpy",
    "napari",
    "matplotlib",
    "imageio-ffmpeg", # napari needs this
    "PyQt5", # napari needs this
    "torch",
    "pyarrow",
    "torch-scatter",
    # "torch-scatter @ https://data.pyg.org/whl/torch-1.12.0+cu116.html",
    "torch-sparse",
    "torch-cluster",
    "torch-spline-conv",
    "torch-geometric"

    # "torchvision",  check actually need this
    # conda install pyg -c pyg
    # pip install pyarrow

]

[project.urls]
"Homepage" = "https://github.com/oubino/heptapods"
"Bug Tracker" = "https://github.com/oubino/heptapods/issues"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py38, py39, py310
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
changedir = tests
deps = pytest
       torch # this is required as torch-scatter, geometric etc.
             # all depend on having torch
commands = pytest
"""