[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]  

[project]
name = "locpix"
dynamic = ["version"]
# version = "0.0.1"
authors = [
  { name="Oliver Umney", email="scou@leeds.ac.uk" },
]
description = "Package for analysing SMLM data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars",
    "numpy",
    "napari",
    "matplotlib",
    "imageio-ffmpeg", # napari needs this
    "PyQt5", # napari needs this
    "pyarrow",
    "scikit-learn",
    "python-dotenv",
    
]

[project.scripts]
preprocess = "locpix.scripts.preprocessing.preprocess:main"
annotate = "locpix.scripts.preprocessing.annotate:main"
get_markers = "locpix.scripts.img_seg.get_markers:main"
classic = "locpix.scripts.img_seg.classic:main"
cellpose = "locpix.scripts.img_seg.cellpose_eval:main"
ilastik_prep = "locpix.scripts.img_seg.ilastik_prep:main"
ilastik_output = "locpix.scripts.img_seg.ilastik_output:main"
membrane_performance = "locpix.scripts.img_seg.membrane_performance:main"
train_cellpose = "locpix.scripts.img_seg.cellpose_train:main"

[project.urls]
"Homepage" = "https://github.com/oubino/locpix"
"Bug Tracker" = "https://github.com/oubino/locpix/issues"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py38, py39, py310
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
changedir = tests
deps = pytest
commands = pytest
"""
